@@ -169,7 +169,10 @@
    - markus@cvs.openbsd.org 2002/01/14 13:34:07
      [nchan.c]
      merge chan_[io]buf_empty[12]; ok provos@
-
+   - markus@cvs.openbsd.org 2002/01/14 13:40:10
+     [nchan.c]
+     correct fn names for ssh2, do not switch from closed to closed; 
+     ok provos@
 
 20020121
  - (djm) Rework ssh-rand-helper:
@@ -7317,4 +7320,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1770 2002/01/22 12:27:45 djm Exp $
+$Id: ChangeLog,v 1.1771 2002/01/22 12:28:13 djm Exp $
